moved menu icon to navbar and js fixes for fancy box on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1,39 +1,5 @@
 @charset "utf-8";
 
-
-/*
- * Off Canvas
- * --------------------------------------------------
- */
-@media screen and (max-width: 767px) {
-  .row-offcanvas {
-    position: relative;
-    -webkit-transition: all .25s ease-out;
-         -o-transition: all .25s ease-out;
-            transition: all .25s ease-out;
-  }
-
-  .row-offcanvas-left {
-    left: 0;
-  }
-
-  .row-offcanvas-left
-  .sidebar-offcanvas {
-    left: -75%; /* 9 columns */
-  }
-
-  .row-offcanvas-left.active {
-    left: 75%; /* 9 columns */
-  }
-
-  .sidebar-offcanvas {
-    position: absolute;
-    top: 0;
-    width: 75%; /* 9 columns */
-  }
-}
-
-
 /* CSS Document */
 body {
   background-color: #FFFFFF;
@@ -205,11 +171,11 @@ p, ol, ul {
 
 
 #navlinks {
-  
   float:left;
-
-  
-  
+}
+#navlinks img {
+  height: 38px;
+  width: auto;
 }
 #navlinks ul {
 
@@ -519,4 +485,56 @@ p, ol, ul {
 #copyright {
   margin-bottom: 15px;
   font-size: 9px;
-} 
+}
+
+
+@media screen and (max-width: 767px) {
+  /*
+   * Off Canvas
+   * --------------------------------------------------
+   */
+  .row-offcanvas {
+    position: relative;
+    -webkit-transition: all .25s ease-out;
+         -o-transition: all .25s ease-out;
+            transition: all .25s ease-out;
+  }
+
+  .row-offcanvas-left {
+    left: 0;
+  }
+
+  .row-offcanvas-left
+  .sidebar-offcanvas {
+    left: -224px; /* 9 columns */
+  }
+
+  .row-offcanvas-left.active {
+    left: 224px; /* 9 columns */
+  }
+
+  .sidebar-offcanvas {
+    position: absolute;
+    top: 0;
+    width: 224px; /* 9 columns */
+  }
+
+  /* header */
+  #headerlogo {
+    float: none;
+    text-align: center;
+  }
+
+  #headerlogo img {
+    margin: 0 auto;
+  }
+
+  /* navlinks */
+  #navlinks {
+    float: none;
+    text-align: right;
+  }
+  #navlinks img {
+    height: 34px;
+  }
+}
